--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --palette1: #9282e0;
@@ -10,6 +11,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -63,19 +65,19 @@ body {
 
 /* Per dispositivi mobile */
 @media only screen and (max-width: 768px) {
-    .col-sm-0 {display: none;}
-    .col-sm-1{width: 8.33%;}
-    .col-sm-2{width: 16.66%;}
-    .col-sm-3{width: 25%;}
-    .col-sm-4 {width: 33.33%;}
-    .col-sm-5 {width: 41.66%;}
-    .col-sm-6 {width: 50%;}
-    .col-sm-7 {width: 58.33%;}
-    .col-sm-8 {width: 66.66%;}
-    .col-sm-9 {width: 75%;}
-    .col-sm-10 {width: 83.33%;}
-    .col-sm-11 {width: 91.66%;}
-    .col-sm-12 {width: 100%;}
+    .col-sm-0 {display: none !important;}
+    .col-sm-1{width: 8.33% !important;}
+    .col-sm-2{width: 16.66% !important;}
+    .col-sm-3{width: 25% !important;}
+    .col-sm-4 {width: 33.33% !important;}
+    .col-sm-5 {width: 41.66% !important;}
+    .col-sm-6 {width: 50% !important;}
+    .col-sm-7 {width: 58.33% !important;}
+    .col-sm-8 {width: 66.66% !important;}
+    .col-sm-9 {width: 75% !important;}
+    .col-sm-10 {width: 83.33% !important;}
+    .col-sm-11 {width: 91.66% !important;}
+    .col-sm-12 {width: 100% !important;}
 
     main div{
         font-size: 8vw;
@@ -143,6 +145,34 @@ body {
 
 .mb-2 {
     margin-bottom: 10px;
+}
+
+.mb-3 {
+    margin-bottom: 15px;
+}
+
+.mb-4 {
+    margin-bottom: 20px;
+}
+
+.mb-5 {
+    margin-bottom: 25px;
+}
+
+.mb-6 {
+    margin-bottom: 30px;
+}
+
+[class *= "w-"] {
+    margin: auto;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.w-90 {
+    width: 90%;
 }
 
 .sticky {
@@ -219,4 +249,53 @@ body {
 
 .icon:active {
     color: var(--palette4);
+}
+
+/* ---------------------------- */
+
+.card {
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 10px;
+    width: 80%;
+    word-wrap: break-word;
+}
+
+.clickable {
+    transition: 0.4s;
+}
+
+.clickable:hover {
+    transform: scale(1.05,1.05);
+    cursor: pointer;
+    border-color: var(--palette1);
+    box-shadow: 5px 5px var(--palette1);
+}
+
+.card .title {
+    font-size: 20px;
+}
+
+.card .subtitle {
+    font-size: 15px;
+    margin-top: -20px;
+}
+
+.thumbnail img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.lead {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.sub-lead {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.price {
+    color: var(--palette5);
 }
