--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -14,7 +14,7 @@
 
 body {
     margin: 0; /* togliere bordi laterali */
-    background-color: papayawhip;
+    background-color: #ffe8eb;
 }
 [class *= "col-"] {
     float: left;
@@ -80,6 +80,12 @@ body {
     main div{
         font-size: 8vw;
     }
+
+    .fieldContainer{
+        margin-top: 40px;
+        height: 800px;
+    }
+
 }
 /* Per dispositivi tablet */
 @media only screen and (max-width: 1024px) {
@@ -156,6 +162,7 @@ body {
     width:100%;
 }
 
+
 .searchbar {
     border: none;
     background-color: var(--palette2);
@@ -167,6 +174,7 @@ body {
     font-size: 24px;
     outline: none;
 }
+
 
 .searchbar:focus {
     outline: none;
@@ -219,4 +227,34 @@ body {
 
 .icon:active {
     color: var(--palette4);
+}
+
+
+
+/*login shit*/
+
+.field{
+    box-shadow: 10px 10px 0 darkorchid;
+    flex-direction: column;
+    padding: 10px 10px;
+    height: 80%;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: var(--palette3);
+    font-family: Roboto, serif;
+}
+
+.fieldContainer{
+    margin-top: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.loginLogo{
+    width: 20vw;
 }
