--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -342,6 +342,14 @@ body {
     height: 100%;
 }
 
+.regFieldContainer{
+    margin-top: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 80%;
+}
+
 .loginLogo{
     width: 20vw;
 }
@@ -354,7 +362,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-    padding: 10px 10px;
+    padding: 10px 0px;
     color: var(--palette5);
     font-size: 24px;
     outline: none;
