--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -362,7 +362,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-    padding: 10px 0px;
+    padding: 10px;
     color: var(--palette5);
     font-size: 24px;
     outline: none;
