--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -218,30 +218,52 @@ main div{
     margin-bottom: 65px;
 }
 
-
-
-.mt-1 {
-    margin-top: 5px;
+.p-1 {
+    padding: 5px;
 }
 
-.mt-2 {
-    margin-top: 10px;
+.p-2 {
+    padding: 10px;
 }
 
-.mt-3 {
-    margin-top: 15px;
+.p-3 {
+    padding: 15px;
 }
 
-.mt-4 {
-    margin-top: 20px;
+.p-4 {
+    padding: 20px;
 }
 
-.mt-5 {
-    margin-top: 25px;
+.p-5 {
+    padding: 25px;
 }
 
-.mt-6 {
-    margin-top: 30px;
+.p-6 {
+    padding: 30px;
+}
+
+.p-1 {
+    padding: 5px;
+}
+
+.p-2 {
+    padding: 10px;
+}
+
+.p-3 {
+    padding: 15px;
+}
+
+.p-4 {
+    padding: 20px;
+}
+
+.p-5 {
+    padding: 25px;
+}
+
+.p-6 {
+    padding: 30px;
 }
 
 [class *= "w-"] {
@@ -440,6 +462,17 @@ a .card{
     background-color: var(--palette3);
 }
 
+.riepilogoContainer{
+    box-shadow: 10px 10px 0 darkorchid;
+    flex-direction: column;
+    padding: 10px 5px;
+    height: 100%;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    background-color: var(--palette3);
+}
+
 .fieldContainer{
     margin-top: 10%;
     display: flex;
@@ -464,7 +497,7 @@ a .card{
     transition: 0.4s;
     box-shadow: 5px 5px 0 darkorchid;
     border: none;
-    background-color: var(--background-color);
+    background-color: white;
     width: 100%;
     height: 100%;
     border-radius: 0;
