--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -12,7 +12,7 @@
 }
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box; /* responsive, fare in modo che il padding / margin venga applicato all'interno della colonna e non al di fuori */
     font-family: "Roboto", sans-serif;
     overflow-wrap: break-word;
 }
@@ -20,161 +20,10 @@
 body {
     margin: 0; /* togliere bordi laterali */
     background-color: var(--background-color);
-}
-[class *= "col-"] {
-    float: left;
-    width: 100%;
-}
-
-.row::after {
-    content: "";
-    clear: both;
-    display: block;
-}
-
-main div{
     font-size: 20px;
 }
 
-
-.col-0 {display: none;}
-.col-1{width: 8.33%;}
-.col-2{width: 16.66%;}
-.col-3{width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-/* offset / spazio tra colonne aggiuntivo */
-[class*="offset-"] {
-    position: relative;
-}
-
-
-.offset-0{left: 0.0%;}
-.offset-1{left: 8.33%;}
-.offset-2{left: 16.66%;}
-.offset-3{left: 25%;}
-.offset-4 {left: 33.33%;}
-.offset-5 {left: 41.66%;}
-.offset-6 {left: 50%;}
-.offset-7 {left: 58.33%;}
-.offset-8 {left: 66.66%;}
-.offset-9 {left: 75%;}
-.offset-10 {left: 83.33%;}
-.offset-11 {left: 91.66%;}
-.offset-12 {left: 100%;}
-
-@media only screen and (max-width: 769px) {
-    .offset-sm-0{left: 0.0%;}
-    .offset-sm-1{left: 8.33%;}
-    .offset-sm-2{left: 16.66%;}
-    .offset-sm-3{left: 25%;}
-    .offset-sm-4 {left: 33.33%;}
-    .offset-sm-5 {left: 41.66%;}
-    .offset-sm-6 {left: 50%;}
-    .offset-sm-7 {left: 58.33%;}
-    .offset-sm-8 {left: 66.66%;}
-    .offset-sm-9 {left: 75%;}
-    .offset-sm-10 {left: 83.33%;}
-    .offset-sm-11 {left: 91.66%;}
-    .offset-sm-12 {left: 100%;}
-}
-
-@media only screen and (max-width: 1024px) and (min-width: 768px) {
-    .offset-md-0{left: 0.0% !important;}
-    .offset-md-1{left: 8.33% !important;}
-    .offset-md-2{left: 16.66% !important;}
-    .offset-md-3{left: 25% !important;}
-    .offset-md-4 {left: 33.33% !important;}
-    .offset-md-5 {left: 41.66% !important;}
-    .offset-md-6 {left: 50% !important;}
-    .offset-md-7 {left: 58.33% !important;}
-    .offset-md-8 {left: 66.66% !important;}
-    .offset-md-9 {left: 75% !important;}
-    .offset-md-10 {left: 83.33% !important;}
-    .offset-md-11 {left: 91.66% !important;}
-    .offset-md-12 {left: 100% !important;}
-}
-
-
-/* Per dispositivi mobile */
-@media only screen and (max-width: 768px) {
-    .col-sm-0 {display: none !important;}
-    .col-sm-1{width: 8.33% !important;}
-    .col-sm-2{width: 16.66% !important;}
-    .col-sm-3{width: 25% !important;}
-    .col-sm-4 {width: 33.33% !important;}
-    .col-sm-5 {width: 41.66% !important;}
-    .col-sm-6 {width: 50% !important;}
-    .col-sm-7 {width: 58.33% !important;}
-    .col-sm-8 {width: 66.66% !important;}
-    .col-sm-9 {width: 75% !important;}
-    .col-sm-10 {width: 83.33% !important;}
-    .col-sm-11 {width: 91.66% !important;}
-    .col-sm-12 {width: 100% !important;}
-
-    .fieldContainer{
-        margin-top: 40px;
-        height: 800px;
-    }
-
-}
-/* Per dispositivi tablet */
-@media only screen and (max-width: 1024px) {
-    .col-md-0 {display: none;}
-    .col-md-1{width: 8.33%;}
-    .col-md-2{width: 16.66%;}
-    .col-md-3{width: 25%;}
-    .col-md-4 {width: 33.33%;}
-    .col-md-5 {width: 41.66%;}
-    .col-md-6 {width: 50%;}
-    .col-md-7 {width: 58.33%;}
-    .col-md-8 {width: 66.66%;}
-    .col-md-9 {width: 75%;}
-    .col-md-10 {width: 83.33%;}
-    .col-md-11 {width: 91.66%;}
-    .col-md-12 {width: 100%;}
-
-
-}
-
-@media only screen and (min-width: 1025px) {
-    .col-lg-0 {display: none;}
-    .col-lg-1{width: 8.33%;}
-    .col-lg-2{width: 16.66%;}
-    .col-lg-3{width: 25%;}
-    .col-lg-4 {width: 33.33%;}
-    .col-lg-5 {width: 41.66%;}
-    .col-lg-6 {width: 50%;}
-    .col-lg-7 {width: 58.33%;}
-    .col-lg-8 {width: 66.66%;}
-    .col-lg-9 {width: 75%;}
-    .col-lg-10 {width: 83.33%;}
-    .col-lg-11 {width: 91.66%;}
-    .col-lg-12 {width: 100%;}
-
-}
-
-.right {
-    float: right !important;
-}
-
-.left {
-    float: left !important;
-}
-
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+/* MARGINE E PADDING ---------------------------------------------------------- */
 
 .mb-1 {
     margin-bottom: 5px !important;
@@ -292,6 +141,46 @@ main div{
     padding: 35px !important;
 }
 
+/* ALLINEAMENTO ---------------------------------------------------------- */
+
+.left {
+    float: left !important;
+}
+
+.right {
+    float: right !important;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.flexHorizontal{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.flexStart {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.flexVertical{
+    display: flex;
+    flex-direction: column;
+}
+
+.flexEnd {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+/* BORDO PAGINA ---------------------------------------------------------- */
+
 [class *= "w-"] {
     margin: auto;
 }
@@ -304,390 +193,174 @@ main div{
     width: 90%;
 }
 
+/* MISC ---------------------------------------------------------- */
+
 .sticky {
-    position: -webkit-sticky;
+    z-index: 100;
     position: sticky;
     top: 0;
     align-self: flex-start;
 }
 
-.logo {
-    width:100%;
-    max-width: 300px !important;
-}
+/* RESPONSIVE ---------------------------------------------------------- */
 
-
-.searchbar {
-    border: none;
-    background-color: var(--palette2);
+[class *= "col-"] {
+    flex: 0 0 auto;
+    float: left;
     width: 100%;
-    height: 100%;
-    border-radius: 0;
-    padding: 10px 10px;
-    color: white;
-    font-size: 24px;
-    outline: none;
 }
 
-::placeholder {
-    color: white;
-    opacity: 0.3;
+.row::after {
+    content: "";
+    clear: both;
+    display: block;
 }
 
-.searchbutton {
-    background-color: var(--palette2);
-    border: none;
-    border-radius: 0;
-    width: 100%;
-    height: 100%;
-    padding: 10px 0;
-    color: white;
-    font-size: 24px;
-}
+.col-0 {display: none;}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 
-.searchbutton:hover,.fieldButton:hover {
-    background-color: var(--palette5);
-}
-
-.searchbutton:hover,.fieldButton:active {
-    background-color: var(--palette4);
-}
-
-
-.navbar {
-    height: auto;
-    /* backdrop-filter: blur(10px); */
-    background-color: var(--palette3);
-    display: flex;
-    overflow: hidden;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: var(--palette2);
-
-}
-.icon {
-    padding: 10px;
-    font-size: 30px;
-}
-
-.icon:hover {
-    color: var(--palette5);
-}
-
-.icon:active {
-    color: var(--palette4);
-}
-
-/* ---------------------------- */
-
-.card {
-    border: 1px solid gray;
-    border-radius: 10px;
-    padding: 10px;
-    width: 80%;
-    word-wrap: break-word;
-}
-
-a {
-    color: var(--link);
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--palette5);
-}
-
-a:active {
-    color: var(--palette3);
-}
-
-.clickable {
-    transition: 0.4s;
-}
-
-.clickable:hover {
-    transform: scale(1.05,1.05);
-    cursor: pointer;
-    border-color: var(--palette1);
-    box-shadow: 5px 5px var(--palette1);
-}
-
-.clickableNoShadow {
-    transition: 0.4s;
-}
-
-.clickableNoShadow:hover {
-    transform: scale(1.05,1.05);
-    cursor: pointer;
-    border-color: var(--palette1);
-}
-
-.card .title {
-    font-size: 20px;
-}
-
-.card .subtitle {
-    font-size: 15px;
-    margin-top: -20px;
-}
-
-.thumbnail img {
-    width: 100%;
-    border-radius: 10px;
-}
-
-.gamePageThumbnail img {
-    width: 100%;
-    max-width: 85%;
-    border-radius: 5px;
-}
-
-.lead {
-    font-weight: bold;
-    font-size: 30px;
-}
-
-.sub-lead {
-    font-weight: bold;
-    font-size: 20px;
-}
-
-
-/*login shit*/
-
-.field{
-    box-shadow: 10px 10px 0 darkorchid;
-    flex-direction: column;
-    padding: 10px 10px;
-    height: 80%;
-    display: flex;
+/* offset / spazio tra colonne aggiuntivo */
+[class*="offset-"] {
     position: relative;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    background-color: var(--palette3);
 }
 
-.flexHorizontal{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
+.offset-0 {margin-left: 0.0%;}
+.offset-1 {margin-left:8.33%;}
+.offset-2 {margin-left:16.66%;}
+.offset-3 {margin-left:25%;}
+.offset-4 {margin-left:33.33%;}
+.offset-5 {margin-left:41.66%;}
+.offset-6 {margin-left:50%;}
+.offset-7 {margin-left:58.33%;}
+.offset-8 {margin-left:66.66%;}
+.offset-9 {margin-left:75%;}
+.offset-10 {margin-left: 83.33%;}
+.offset-11 {margin-left: 91.66%;}
+.offset-12 {margin-left: 100%;}
 
-.flexVertical{
-    display: flex;
-    flex-direction: column;
-}
+/* Dispositivi mobile */
+@media only screen and (max-width: 480px) {
+    .col-sm-0 {display: none !important;}
+    .col-sm-1 {width: 8.33% !important;}
+    .col-sm-2 {width: 16.66% !important;}
+    .col-sm-3 {width: 25% !important;}
+    .col-sm-4 {width: 33.33% !important;}
+    .col-sm-5 {width: 41.66% !important;}
+    .col-sm-6 {width: 50% !important;}
+    .col-sm-7 {width: 58.33% !important;}
+    .col-sm-8 {width: 66.66% !important;}
+    .col-sm-9 {width: 75% !important;}
+    .col-sm-10 {width: 83.33% !important;}
+    .col-sm-11 {width: 91.66% !important;}
+    .col-sm-12 {width: 100% !important;}
 
-.gameContainer{
-    box-shadow: 10px 10px 0 darkorchid;
-    flex-direction: column;
-    padding: 10px 5px;
-    margin-top: 120px;
-    height: 100%;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    align-items: stretch;
-    background-color: var(--palette3);
-}
+    .offset-sm-0 {margin-left: 0.0%; !important;}
+    .offset-sm-1 {margin-left: 8.33%; !important;}
+    .offset-sm-2 {margin-left: 16.66%; !important;}
+    .offset-sm-3 {margin-left: 25%; !important;}
+    .offset-sm-4 {margin-left: 33.33%; !important;}
+    .offset-sm-5 {margin-left: 41.66%; !important;}
+    .offset-sm-6 {margin-left: 50%; !important;}
+    .offset-sm-7 {margin-left: 58.33%; !important;}
+    .offset-sm-8 {margin-left: 66.66%; !important;}
+    .offset-sm-9 {margin-left: 75%; !important;}
+    .offset-sm-10 {margin-left: 83.33%; !important;}
+    .offset-sm-11 {margin-left: 91.66%; !important;}
+    .offset-sm-12 {margin-left: 100%; !important;}
 
-.gameContainerCheckout{
-    box-shadow: 10px 10px 0 darkorchid;
-    flex-direction: column;
-    padding: 10px 10px;
-    margin-top: 5px;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    align-items: stretch;
-    background-color: var(--palette3);
-}
-
-
-.riepilogoContainer{
-    box-shadow: 10px 10px 0 darkorchid;
-    flex-direction: column;
-    padding: 10px 5px;
-    height: 100%;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    background-color: var(--palette3);
-}
-
-.fieldContainer{
-    margin-top: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-.regFieldContainer{
-    margin-top: 3%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80%;
-}
-
-.loginLogo{
-    width: 20vw;
-}
-
-.input{
-    transition: 0.4s;
-    box-shadow: 5px 5px 0 darkorchid;
-    border: none;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    border-radius: 0;
-    padding: 10px;
-    color: var(--palette5);
-    font-size: 24px;
-    outline: none;
-}
-
-.input:focus{
-    border : 2px solid var(--palette5);
-    transform: scale(1.10,1.00);
-    cursor: pointer;
-}
-
-div.error-alert {
-    background-color: lightpink;
-    color: darkred;
-    border: 1px solid darkred;
-    border-radius: 5px;
-    justify-content: center;
-    padding: 10px;
-    width: 100%;
-}
-
-div.info-alert {
-    background-color: lightgreen;
-    color: darkgreen;
-    border: 1px solid darkgreen;
-    border-radius: 5px;
-    justify-content: center;
-    padding: 10px;
-    width: 100%;
-}
-
-.fieldIcon {
-    color: darkorchid;
-    font-size: 2vw;
-}
-
-.fieldButton {
-    box-shadow: 5px 5px 0 darkorchid;
-        background-color: var(--palette2);
-        border: none;
-        border-radius: 0;
-        width: 100%;
-        height: 100%;
-        padding: 10px 0;
-        color: white;
-        font-size: 24px;
-}
-
-.cards {
-    width: 150px;
-}
-
-.disabled {
-    opacity: 0.5 !important;
-}
-
-#description {
-    resize: none;
-    height: 200px;
-}
-/* Home page css aggiunte */
-
-.container {
-    min-height: 20%;
-    overflow: hidden;
-}
-
-.hero {
-    color: #ffffff;
-    text-align: center;
-    padding: 20px;
-    text-shadow: 0 0 5px black;
-}
-
-@media only screen and (min-width:768px){
+    /* altre proprietà per dispositivi mobile */
     .hero {
         padding: 60px;
     }
+
+    .fieldContainer{
+        margin-top: 40px;
+        height: 800px;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .flexEnd {
+        display: none;
+    }
 }
 
-.hero-bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: url("../images/banner.png") repeat-x;
-    width: 100%;
-    height: 400px;
-    z-index: -1;
-    animation: slide 60s linear infinite alternate;
-    filter: brightness(50%);
+/* Dispositivi tablet */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .col-md-0 {display: none; !important;}
+    .col-md-1 {width: 8.33%; !important;}
+    .col-md-2 {width: 16.66%; !important;}
+    .col-md-3 {width: 25%; !important;}
+    .col-md-4 {width: 33.33%; !important;}
+    .col-md-5 {width: 41.66%; !important;}
+    .col-md-6 {width: 50%; !important;}
+    .col-md-7 {width: 58.33%; !important;}
+    .col-md-8 {width: 66.66%; !important;}
+    .col-md-9 {width: 75%; !important;}
+    .col-md-10 {width: 83.33%; !important;}
+    .col-md-11 {width: 91.66%; !important;}
+    .col-md-12 {width: 100%; !important;}
+
+    .offset-md-0 {margin-left: 0.0% !important;}
+    .offset-md-1 {margin-left: 8.33% !important;}
+    .offset-md-2 {margin-left: 16.66% !important;}
+    .offset-md-3 {margin-left: 25% !important;}
+    .offset-md-4 {margin-left: 33.33% !important;}
+    .offset-md-5 {margin-left: 41.66% !important;}
+    .offset-md-6 {margin-left: 50% !important;}
+    .offset-md-7 {margin-left: 58.33% !important;}
+    .offset-md-8 {margin-left: 66.66% !important;}
+    .offset-md-9 {margin-left: 75% !important;}
+    .offset-md-10 {margin-left: 83.33% !important;}
+    .offset-md-11 {margin-left: 91.66% !important;}
+    .offset-md-12 {margin-left: 100% !important;}
+
+    .flexEnd {
+        display: none;
+    }
 }
 
-@keyframes slide {
-    from { background-position: 0 0; }
-    to { background-position: 100% 0; }
+/* Dispostivi desktop */
+@media only screen and (min-width: 769px) {
+    .col-lg-0 {display: none; !important}
+    .col-lg-1 {width: 8.33%; !important}
+    .col-lg-2 {width: 16.66%; !important}
+    .col-lg-3 {width: 25%; !important;}
+    .col-lg-4 {width: 33.33%; !important}
+    .col-lg-5 {width: 41.66%; !important}
+    .col-lg-6 {width: 50%; !important}
+    .col-lg-7 {width: 58.33%; !important}
+    .col-lg-8 {width: 66.66%; !important}
+    .col-lg-9 {width: 75%; !important}
+    .col-lg-10 {width: 83.33%; !important}
+    .col-lg-11 {width: 91.66%; !important}
+    .col-lg-12 {width: 100%; !important}
+
+    .offset-lg-0 {margin-left: 0.0% !important;}
+    .offset-lg-1 {margin-left: 8.33% !important;}
+    .offset-lg-2 {margin-left: 16.66% !important;}
+    .offset-lg-3 {margin-left: 25% !important;}
+    .offset-lg-4 {margin-left: 33.33% !important;}
+    .offset-lg-5 {margin-left: 41.66% !important;}
+    .offset-lg-6 {margin-left: 50% !important;}
+    .offset-lg-7 {margin-left: 58.33% !important;}
+    .offset-lg-8 {margin-left: 66.66% !important;}
+    .offset-lg-9 {margin-left: 75% !important;}
+    .offset-lg-10 {margin-left: 83.33% !important;}
+    .offset-lg-11 {margin-left: 91.66% !important;}
+    .offset-lg-12 {margin-left: 100% !important;}
 }
 
-.hero-title {
-    font-size: 48px;
-    margin-bottom: 20px;
-}
-
-.hero-subtitle {
-    font-size: 24px;
-    margin-bottom: 30px;
-}
-
-.hero-button {
-    padding: 15px 30px;
-    font-size: 20px;
-    background-color: var(--palette2);
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.hero-button:hover {
-    background-color: var(--palette5);
-}
-
-.feature {
-    padding: 20px;
-}
-
-.feature .card {
-    padding: 20px;
-    text-align: center;
-}
-
-.feature .title {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.feature .subtitle {
-    font-size: 16px;
-    color: var(--palette4);
-}
