--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -298,7 +298,7 @@ body {
         display: none;
     }
 
-    .cut-text {
+    .cut-text ,.cut-text-main {
         width: 78vw;
     }
 }
@@ -340,6 +340,10 @@ body {
     .cut-text {
         width: 40vw;
     }
+
+    .cut-text-main {
+        width: 70vw;
+    }
 }
 
 /* Dispostivi desktop */
@@ -372,12 +376,12 @@ body {
     .offset-lg-11 {margin-left: 91.66% !important;}
     .offset-lg-12 {margin-left: 100% !important;}
 
-    .cut-text {
+    .cut-text, .cut-text-main {
         width: 25vw;
     }
 }
 
-.cut-text {
+.cut-text , .cut-text-main {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
